@@ -1,3 +1,8 @@
+2008-06-08  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (raise-p-list, show-all-children):
+	Raise only viewable children.
+
 2008-06-06  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (show-all-children): Always raise all
